// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButton /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      buttonColor="#fffeee"
      className="sc-a69c970d-0 grDHqA"
      labelColor="#fff"
      type="facebook"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-facebook"
        />
      </span>
      <a
        href="/login/facebook?_destination=http://localhost/"
        title="facebook"
      >
        Facebook
      </a>
    </div>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly franceConnect 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL hrBWZS cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-a69c970d-1 dOdaNv"
      justifyContent="center"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL lhlJyz"
    >
      <a
        className="sc-bcXGCL hpjBkM cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL kBGUAc cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly with grandLyonConnect 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-a69c970d-2 ggXlew"
  >
    <a
      href="/login/openid?_destination=http://localhost/"
      title="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-grandLyonConnect"
        />
      </span>
    </a>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly with switchusermode 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      buttonColor="#fffeee"
      className="sc-a69c970d-0 mRdRU"
      labelColor="#fff"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          openid
        </span>
      </a>
    </div>
  </div>,
]
`;
